tests/rosetta/out/Rust/averages-root-mean-square.error
rustc: exit status 1
error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
  --> /tmp/averages-root-mean-square.rs:16:24
   |
16 |         sum = sum + (x.parse::<f64>().unwrap()) * (x.parse::<f64>().unwrap());
   |                        ^^^^^
   |
help: you must specify a type for this binding, like `i32`
   |
14 |     let mut x: i32 = 1;
   |              +++++

error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
  --> /tmp/averages-root-mean-square.rs:16:54
   |
16 |         sum = sum + (x.parse::<f64>().unwrap()) * (x.parse::<f64>().unwrap());
   |                                                      ^^^^^
   |
help: you must specify a type for this binding, like `i32`
   |
14 |     let mut x: i32 = 1;
   |              +++++

error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
  --> /tmp/averages-root-mean-square.rs:19:35
   |
19 |     let rms = sqrtApprox(sum / (n.parse::<f64>().unwrap()));
   |                                   ^^^^^
   |
help: you must specify a type for this binding, like `i32`
   |
12 |     let n: i32 = 10;
   |          +++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0689`.
