tests/rosetta/out/Rust/averages-root-mean-square.rs
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
fn main() {
    fn sqrtApprox(x: f64) -> f64 {
        let mut guess = x;
        let mut i = 0;
        while i < 20 {
            guess = (guess + x / guess) / 2.0;
            i += 1;
        }
        return guess;
    }
    let n = 10;
    let mut sum = 0.0;
    let mut x = 1;
    while x <= n {
        sum = sum + (x.parse::<f64>().unwrap()) * (x.parse::<f64>().unwrap());
        x += 1;
    }
    let rms = sqrtApprox(sum / (n.parse::<f64>().unwrap()));
    println!("{}", vec![format!("{}", rms.to_string())].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
}
